Fixed background image not covering full screen in mobile view and properly centered hero text.

--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -1,6 +1,7 @@
 /* Grid */
-body {
-    margin: 0;
+body, html {
+  height: 100%;
+  margin: 0;
 }
 
 * {
@@ -128,11 +129,11 @@ body {
       }
     }
     
-    #hero-text {
+    /*#hero-text {
         text-align: center;
         position: relative;
         top: -200px;
-    }
+    }*/
     
 }
 
@@ -152,11 +153,11 @@ body {
         float: right;
     }
     
-    #hero-text {
+    /*#hero-text {
         text-align: center;
         position: relative;
         top: -350px;
-    }
+    }*/
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -171,11 +172,11 @@ body {
     }
   }
     
-    #hero-text {
+    /*#hero-text {
         text-align: center;
         position: relative;
         top: -300px;
-    }
+    }*/
     
 }
 
@@ -191,11 +192,11 @@ body {
     }
   }
   
-    #hero-text {
+    /*#hero-text {
         text-align: center;
         position: relative;
         top: -400px;
-    }
+    }*/
 } 
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -210,17 +211,25 @@ body {
     }
   }
   
-    #hero-text {
+    /*#hero-text {
         text-align: center;
         position: relative;
         top: -550px;
-    }
+    }*/
 }
 
 /* */
-#background-image {
-   max-width: 100%;
-    height: auto;
+.bg {
+  /* The image used */
+  background-image:url(images/1.jpg);
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .footer {
@@ -258,5 +267,14 @@ body {
     left: 0;
     margin-left: 20px;
     margin-right: 20px;
+}
+
+#hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
 }
 
